; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/obs-transitions/extr_transition-luma-wipe.c_luma_wipe_update.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/obs-transitions/extr_transition-luma-wipe.c_luma_wipe_update.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.luma_wipe_info = type { float, i32, i32 }
%struct.dstr = type { i32, i32 }

@S_LUMA_IMG = common dso_local global i32 0, align 4
@S_LUMA_INV = common dso_local global i32 0, align 4
@S_LUMA_SOFT = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [12 x i8] c"luma_wipes/\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32*)* @luma_wipe_update to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @luma_wipe_update(i8* %0, i32* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.luma_wipe_info*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.dstr, align 4
  %8 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  store i32* %1, i32** %4, align 8
  %9 = load i8*, i8** %3, align 8
  %10 = bitcast i8* %9 to %struct.luma_wipe_info*
  store %struct.luma_wipe_info* %10, %struct.luma_wipe_info** %5, align 8
  %11 = load i32*, i32** %4, align 8
  %12 = load i32, i32* @S_LUMA_IMG, align 4
  %13 = call i8* @obs_data_get_string(i32* %11, i32 %12)
  store i8* %13, i8** %6, align 8
  %14 = load i32*, i32** %4, align 8
  %15 = load i32, i32* @S_LUMA_INV, align 4
  %16 = call i32 @obs_data_get_bool(i32* %14, i32 %15)
  %17 = load %struct.luma_wipe_info*, %struct.luma_wipe_info** %5, align 8
  %18 = getelementptr inbounds %struct.luma_wipe_info, %struct.luma_wipe_info* %17, i32 0, i32 2
  store i32 %16, i32* %18, align 4
  %19 = load i32*, i32** %4, align 8
  %20 = load i32, i32* @S_LUMA_SOFT, align 4
  %21 = call i64 @obs_data_get_double(i32* %19, i32 %20)
  %22 = sitofp i64 %21 to float
  %23 = load %struct.luma_wipe_info*, %struct.luma_wipe_info** %5, align 8
  %24 = getelementptr inbounds %struct.luma_wipe_info, %struct.luma_wipe_info* %23, i32 0, i32 0
  store float %22, float* %24, align 4
  %25 = bitcast %struct.dstr* %7 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 4 %25, i8 0, i64 8, i1 false)
  %26 = call i32 @dstr_copy(%struct.dstr* %7, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0))
  %27 = load i8*, i8** %6, align 8
  %28 = call i32 @dstr_cat(%struct.dstr* %7, i8* %27)
  %29 = getelementptr inbounds %struct.dstr, %struct.dstr* %7, i32 0, i32 0
  %30 = load i32, i32* %29, align 4
  %31 = call i8* @obs_module_file(i32 %30)
  store i8* %31, i8** %8, align 8
  %32 = call i32 (...) @obs_enter_graphics()
  %33 = load %struct.luma_wipe_info*, %struct.luma_wipe_info** %5, align 8
  %34 = getelementptr inbounds %struct.luma_wipe_info, %struct.luma_wipe_info* %33, i32 0, i32 1
  %35 = call i32 @gs_image_file_free(i32* %34)
  %36 = call i32 (...) @obs_leave_graphics()
  %37 = load %struct.luma_wipe_info*, %struct.luma_wipe_info** %5, align 8
  %38 = getelementptr inbounds %struct.luma_wipe_info, %struct.luma_wipe_info* %37, i32 0, i32 1
  %39 = load i8*, i8** %8, align 8
  %40 = call i32 @gs_image_file_init(i32* %38, i8* %39)
  %41 = call i32 (...) @obs_enter_graphics()
  %42 = load %struct.luma_wipe_info*, %struct.luma_wipe_info** %5, align 8
  %43 = getelementptr inbounds %struct.luma_wipe_info, %struct.luma_wipe_info* %42, i32 0, i32 1
  %44 = call i32 @gs_image_file_init_texture(i32* %43)
  %45 = call i32 (...) @obs_leave_graphics()
  %46 = load i8*, i8** %8, align 8
  %47 = call i32 @bfree(i8* %46)
  %48 = call i32 @dstr_free(%struct.dstr* %7)
  %49 = load i32*, i32** %4, align 8
  %50 = call i32 @UNUSED_PARAMETER(i32* %49)
  ret void
}

declare dso_local i8* @obs_data_get_string(i32*, i32) #1

declare dso_local i32 @obs_data_get_bool(i32*, i32) #1

declare dso_local i64 @obs_data_get_double(i32*, i32) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #2

declare dso_local i32 @dstr_copy(%struct.dstr*, i8*) #1

declare dso_local i32 @dstr_cat(%struct.dstr*, i8*) #1

declare dso_local i8* @obs_module_file(i32) #1

declare dso_local i32 @obs_enter_graphics(...) #1

declare dso_local i32 @gs_image_file_free(i32*) #1

declare dso_local i32 @obs_leave_graphics(...) #1

declare dso_local i32 @gs_image_file_init(i32*, i8*) #1

declare dso_local i32 @gs_image_file_init_texture(i32*) #1

declare dso_local i32 @bfree(i8*) #1

declare dso_local i32 @dstr_free(%struct.dstr*) #1

declare dso_local i32 @UNUSED_PARAMETER(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
